--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,9 @@
 </span></code></pre></td></tr></table></div></figure>
 
 
-<p>You can modify which browsers are supported by changing the browser array.  For more documentation, check out the <a href="https://github.com/nDmitry/grunt-autoprefixer">github repo</a>.</p>
+<p>As you can see, the css we write is much simpler than the generated css and we no longer have to worry ourselves with maintaining prefixes as browser support changes.  Updating our css is as simple as rerunning our Grunt task.</p>
+
+<p>You can modify which browsers are supported by changing the browser array in the grunt-autoprefixer options.  For more documentation, check out the <a href="https://github.com/nDmitry/grunt-autoprefixer">github repo</a>.</p>
 </div>
   
   
